Add correct security context to socks shop