@@ -9,5 +9,4 @@
 
 | ENV | VALUE |
 | --- | -----  |
-|JAVA_OPTS | -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom|
-|ZIPKIN | zipkin.jaeger.svc.cluster.local|
+|mongo | user-db:27017|
